# moltcli

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.md  pyproject.toml  requirements.txt
docs/: CLI_FIRST_PHILOSOPHY.md  CLI_FIRST_PRACTICE.md  README.md  SKILL.md  skill.md
moltcli/: __init__.py  cli.py
moltcli/core/: __init__.py  agent.py  auth.py  comment.py  feed.py  post.py  search.py  submolts.py  vote.py
moltcli/utils/: __init__.py  api_client.py  challenge.py  config.py  errors.py  formatter.py  memory.py
tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_core.py  test_errors.py  test_formatter.py
